# JurassicDucks

./: CMakeLists.txt  JurassicDucks.pro  Makefile  Vec2.h  Vec3.h  Vec4.h  duck_frag.glsl  duck_vert.glsl  glheaders.h  headers.h  jdUtility.cpp  jdUtility.h  jdalgorithm.cpp  jdalgorithm.h  jdcamera.cpp  jdcamera.h  jddata  jdfactors.h  jdflockdialog.cpp  jdflockdialog.h  jdfont.cpp  jdfont.h  jdgpushader.cpp  jdgpushader.h  jdlight.cpp  jdlight.h  jdmap.cpp  jdmap.h  jdobstacle.cpp  jdobstacle.h  jdobstacles.cpp  jdobstacles.h  jdplayer.cpp  jdplayer.h  jdreaderwriter.cpp  jdreaderwriter.h  jdterrain.cpp  jdterrain.h  jdtext.cpp  jdtext.h  (+19 more)
CSIT/: trees.txt
Documents/: JDuckClassDigram.zargo  Jurassic Duck report.docx  link.txt
Tests/: run  test  test0.cpp  test1.cpp  test2.cpp  test3.cpp
Tests/cJSON/: test
Tests/json/: jddata.json  main.cpp  test
